--- a/README
+++ b/README
@@ -325,8 +325,8 @@ See Also
 
 Authors
     chaoslawful (王晓哲) <chaoslawful at gmail dot com>,
-    agentzh (章亦春) <agentzh at gmail dot com>.
-    Piotr Sikora
+    agentzh (章亦春) <agentzh at gmail dot com>,
+    Piotr Sikora <piotr.sikora at frickle dot com>.
 
 Copyright & License
     The implementation of the builtin connection pool has borrowed
