added copyright notice for Piotr Sikora.

--- a/README
+++ b/README
@@ -294,11 +294,13 @@ Copyright & License
 
     This module is licenced under the BSD license.
 
-    Copyright (c) 2009, Taobao Inc., Alibaba Group ( http://www.taobao.com ).
+    Copyright (c) 2009-2010, Taobao Inc., Alibaba Group ( http://www.taobao.com ).
 
-    Copyright (c) 2009, chaoslawful <chaoslawful@gmail.com>.
+    Copyright (c) 2009-2010, chaoslawful <chaoslawful@gmail.com>.
 
-    Copyright (C) 2009 by agentzh <agentzh@gmail.com>.
+    Copyright (C) 2009-2010 by agentzh <agentzh@gmail.com>.
+
+    Copyright (C) 2010 by FRiCKLE Piotr Sikora <info@frickle.com>
 
     All rights reserved.
 
