--- a/README
+++ b/README
@@ -299,11 +299,11 @@ Copyright & License
 
     Copyright (c) 2009-2010, Taobao Inc., Alibaba Group ( http://www.taobao.com ).
 
-    Copyright (c) 2009-2010, chaoslawful <chaoslawful@gmail.com>.
+    Copyright (c) 2009-2010, Xiaozhe Wang (chaoslawful) <chaoslawful@gmail.com>.
 
-    Copyright (C) 2009-2010 by agentzh <agentzh@gmail.com>.
+    Copyright (C) 2009-2010, Yichun Zhang (agentzh) <agentzh@gmail.com>.
 
-    Copyright (C) 2010 by FRiCKLE Piotr Sikora <info@frickle.com>
+    Copyright (C) 2010, FRiCKLE Piotr Sikora <info@frickle.com>.
 
     All rights reserved.
 
