--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Name
         mysql, drizzle, and sqlite3 by libdrizzle
 
 Status
-    This module is almost production ready but it's
+    This module is ready considered production-ready but it's
     required to patch libdrizzle-0.8 using the following
     patch in order to fix a nasty bug in libdrizzle:
 
