--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Name
 Status
     This module is already considered production-ready but it's
     required to patch libdrizzle-0.8 using the following
-    patch in order to fix a nasty bug in libdrizzle:
+    patch in order to fix two serious bug in it:
 
       http://agentzh.org/misc/nginx/libdrizzle-0.8-parsebug_and_mac_fixes.patch
 
@@ -203,14 +203,23 @@ Output
           can span multiple bufs
 
 Installation
-    You should first install the latest libdrizzle which can be
-    obtained from here (last tested version of libdrizzle is 0.8):
+    * You should first install libdrizzle 0.8 which can be
+        obtained from here:
 
         https://launchpad.net/libdrizzle
 
-    Grab the nginx source code from nginx.net (<http://nginx.net/>), for
-    example, the version 0.8.41 (see nginx compatibility), and then build
-    the source with this module:
+    * Use the following patch in order to fix two serious bugs in
+        libdrizzle:
+
+        http://agentzh.org/misc/nginx/libdrizzle-0.8-parsebug_and_mac_fixes.patch
+
+    * Download the latest version of the release tarball of this module from
+    drizzle-nginx-module file list
+    (<http://github.com/agentzh/drizzle-nginx-module/downloads>).
+
+    * Grab the nginx source code from nginx.net (<http://nginx.net/>), for
+        example, the version 0.8.41 (see nginx compatibility), and then build
+        the source with this module:
 
         $ wget 'http://sysoev.ru/nginx/nginx-0.8.41.tar.gz'
         $ tar -xzvf nginx-0.8.41.tar.gz
@@ -222,10 +231,6 @@ Installation
 
         $ make -j2
         $ make install
-
-    Download the latest version of the release tarball of this module from
-    drizzle-nginx-module file list
-    (<http://github.com/agentzh/drizzle-nginx-module/downloads>).
 
 Compatibility
     The following versions of Nginx should work with this module:
