--- a/README
+++ b/README
@@ -263,7 +263,7 @@ Installation
 Compatibility
     The following versions of Nginx should work with this module:
 
-    *   0.8.x (last tested version is 0.8.41)
+    *   0.8.x (last tested: 0.8.53)
 
     *   0.7.x >= 0.7.44 (last tested version is 0.7.67)
 
