--- a/README
+++ b/README
@@ -309,15 +309,29 @@ Output
           can span multiple bufs
 
 Trouble Shooting
-    When you see the following error message in error.log:
+    * When you see the following error message in error.log:
 
-       failed to connect: 15: drizzle_state_handshake_result_read:
-           old insecure authentication mechanism not supported in upstream
+         failed to connect: 15: drizzle_state_handshake_result_read:
+             old insecure authentication mechanism not supported in upstream, ...
 
-    then you may checkout if your mysql is too old (at least 5.x is required)
-    or your mysql config file explicitly forces the use of old authentication
-    method (you should remove the "old-passwords" line from your my.cnf and
-    add the line "secure_auth 1").
+      then you may checkout if your mysql is too old (at least 5.x is required)
+      or your mysql config file explicitly forces the use of old authentication
+      method (you should remove the "old-passwords" line from your my.cnf and
+      add the line "secure_auth 1").
+
+    * When you see the following error message in error.log:
+
+        failed to connect: 23: Access denied for user 'root'@'ubuntu'
+        (using password: YES) while connecting to drizzle upstream, ...
+
+      You should check if your mysql account does have got TCP login access on your
+      mysql server side. A quick check is to use mysql's official client to connect
+      to your server:
+
+        mysql --protocol=tcp -u user --password=password -h foo.bar.com dbname
+
+      Note that the --protocol=tcp option is required here, or your mysql client may
+      use unix domain socket to connect to your mysql server.
 
 Installation
     * You should first install libdrizzle 0.8 which can be
