--- a/README
+++ b/README
@@ -420,6 +420,8 @@ Compatibility
 
     The following versions of Nginx should work with this module:
 
+    *   1.0.x (last tested: 1.0.2)
+
     *   0.8.x (last tested: 0.8.53)
 
     *   0.7.x >= 0.7.44 (last tested version is 0.7.67)
