--- a/doc/NginxHttpDrizzleModule.wiki
+++ b/doc/NginxHttpDrizzleModule.wiki
@@ -317,6 +317,57 @@ The output looks like this:
 </geshi>
 Note that, this is ''not'' the global statistics if you do have multiple Nginx worker processes configured in your <code>nginx.conf</code>.
 
+= Variables =
+
+This module creates the following Nginx variables:
+
+== $drizzle_thread_id ==
+
+This variable will be assigned a textual number of the underlying MySQL or Drizzle query thread ID when the current SQL query times out. This thread ID can be further used in a SQL kill command to cancel the timed-out query.
+
+Here's an example:
+<geshi lang="nginx">
+    drizzle_connect_timeout 1s;
+    drizzle_send_query_timeout 2s;
+    drizzle_recv_cols_timeout 1s;
+    drizzle_recv_rowss_timeout 1s;
+
+    location /query {
+        drizzle_query 'select sleep(10)';
+        drizzle_pass my_backend;
+        rds_json on;
+
+        more_set_headers -s 504 'X-Mysql-Tid: $drizzle_thread_id';                                   
+    }
+
+    location /kill {
+        drizzle_query "kill query $arg_tid";
+        drizzle_pass my_backend;
+        rds_json on;
+    }
+
+    location /main {
+        content_by_lua '
+            local res = ngx.location.catpure("/query")
+            if res.status ~= ngx.HTTP_OK then
+                local tid = res.header["X-Mysql-Tid"]
+                if tid and tid ~= "" then
+                    ngx.location.capture("/kill", { args = {tid = tid} })
+                end
+                return ngx.HTTP_INTERNAL_SERVER_ERROR;
+            end
+            ngx.print(res.body)
+        '
+    }
+</geshi>
+where we make use of [[NginxHttpHeadersMoreModule]], [[NginxHttpLuaModule]], and [[NginxHttpRdsJsonModule]] too. When the SQL query timed out, we'll explicitly cancel it immediately. One pitfall here is that you have to add these modules in this order while building Nginx:
+
+* [[NginxHttpLuaModule]]
+* [[NginxHttpHeadersMoreModule]]
+* [[NginxHttpRdsJsonModule]]
+
+Such that, their output filters will work in the ''reversed'' order, i.e., first convert RDS to JSON, and then add our <code>X-Mysql-Tid</code> custom header, and finally capture the whole (subrequest) response with the Lua module. You're recommended to use the [http://openresty.org/ OpenResty bundle] though, it ensures the module building order automatically for you.
+
 = Output Format =
 
 This module generates binary query results in a format that is shared among the various Nginx database driver modules like [http://github.com/FRiCKLE/ngx_postgres/ ngx_postgres]. This data format is named <code>Resty DBD Stream</code> (RDS).
