--- a/README
+++ b/README
@@ -10,9 +10,9 @@ Status
     LineZing site (<http://lz.taobao.com>).
 
 Version
-    This document describes drizzle-nginx-module v0.1.1rc3
+    This document describes drizzle-nginx-module v0.1.1rc4
     (<https://github.com/chaoslawful/drizzle-nginx-module/downloads>)
-    released on 4 August 2011.
+    released on 23 August 2011.
 
 Synopsis
         http {
@@ -38,10 +38,10 @@ Synopsis
 
                     drizzle_pass backend;
 
-                    drizzle_connect_timeout 500 ms; # default 60 s
-                    drizzle_send_query_timeout 2 s; # default 60 s
-                    drizzle_recv_cols 1 s; # default 60 s
-                    drizzle_recv_rows 1 s; # default 60 s
+                    drizzle_connect_timeout    500ms; # default 60s
+                    drizzle_send_query_timeout 2s;    # default 60s
+                    drizzle_recv_cols_timeout  1s;    # default 60s
+                    drizzle_recv_rows_timeout  1s;    # default 60s
                 }
 
                 ...
@@ -228,9 +228,9 @@ Directives
     Specify the (total) timeout for connecting to a remote Drizzle or MySQL
     server.
 
-    The "<time>" can be an integer, with an optional time unit, like "s",
-    "ms", "m". The default time unit is "s", ie, "second". The default
-    setting is "60 s".
+    The "<time>" argument can be an integer, with an optional time unit,
+    like "s" (second), "ms" (millisecond), "m" (minute). The default time
+    unit is "s", ie, "second". The default setting is "60s".
 
   drizzle_send_query_timeout
     syntax: *drizzle_send_query_timeout <time>*
@@ -242,9 +242,9 @@ Directives
     Specify the (total) timeout for sending a SQL query to a remote Drizzle
     or MySQL server.
 
-    The "<time>" can be an integer, with an optional time unit, like "s",
-    "ms", "m". The default time unit is "s", ie, "second". The default
-    setting is "60 s".
+    The "<time>" argument can be an integer, with an optional time unit,
+    like "s" (second), "ms" (millisecond), "m" (minute). The default time
+    unit is "s", ie, "second". The default setting is "60s".
 
   drizzle_recv_cols_timeout
     syntax: *drizzle_recv_cols_timeout <time>*
@@ -256,9 +256,9 @@ Directives
     Specify the (total) timeout for receiving the columns metadata of the
     result-set to a remote Drizzle or MySQL server.
 
-    The "<time>" can be an integer, with an optional time unit, like "s",
-    "ms", "m". The default time unit is "s", ie, "second". The default
-    setting is "60 s".
+    The "<time>" argument can be an integer, with an optional time unit,
+    like "s" (second), "ms" (millisecond), "m" (minute). The default time
+    unit is "s", ie, "second". The default setting is "60s".
 
   drizzle_recv_rows_timeout
     syntax: *drizzle_recv_rows_timeout <time>*
@@ -270,9 +270,9 @@ Directives
     Specify the (total) timeout for receiving the rows data of the
     result-set (if any) to a remote Drizzle or MySQL server.
 
-    The "<time>" can be an integer, with an optional time unit, like "s",
-    "ms", "m". The default time unit is "s", ie, "second". The default
-    setting is "60 s".
+    The "<time>" argument can be an integer, with an optional time unit,
+    like "s" (second), "ms" (millisecond), "m" (minute). The default time
+    unit is "s", ie, "second". The default setting is "60s".
 
   drizzle_buffer_size
     syntax: *drizzle_buffer_size <size>*
